# cabal-devmelopner

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  PHASE.md  README.md  cabal.example.toml  pyproject.toml  setup.sh
.claude/kickoffs/: README.md
.github/workflows/: ci.yml  gitleaks.yml
docs/: COMPOSE.md  INTENT_AND_GAP_ANALYSIS.md  LOCAL_TOOLING.md  OPEN_ISSUES.md  RELEASE_1_0_0.md  ROADMAP.md  SECURITY_REVIEW_1_0.md  TERO.md  TOOLING_STACK_READINESS.md  V1_0_0_GAP_ANALYSIS.md  V1_0_0_JOINT_EXECUTION.md
docs/tero-index/: INDEX.md  MANIFEST.toml  index.json
scripts/: check.sh  compose-doctor.sh
src/cabal_devmelopner/: __init__.py  cli.py  notify.py
src/cabal_devmelopner/core/: agent.py  config.py  events.py  prompt.py  schemas.py  session.py  tools.py  types.py
src/cabal_devmelopner/mcp/: tero_client.py
src/cabal_devmelopner/providers/: base.py  xai.py
src/cabal_devmelopner/tui/: app.py
tests/: __init__.py  test_cancel_hitl.py  test_config.py  test_notify_budget.py  test_path_confinement.py  test_session.py  test_smoke.py
