[project]
name = "cabal-devmelopner"
version = "0.1.0"
description = "Repo-agnostic development agent with TUI/CLI, multi-provider support, and Tero-MCP integration"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Tyler", email = "tz-dev@vectorweight.com" }
]
license = { text = "MIT" }
dependencies = []

[tool.uv]
managed = true
python-preference = "only-managed"
default-groups = ["dev"]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.11",
    "pytest>=8.3",
    "textual-dev>=0.80",
]

[project.optional-dependencies]
tui = ["textual>=0.80.0"]

[project.scripts]
cabal-devmelopner = "cabal_devmelopner.cli:main"
cabal-devmelopner-tui = "cabal_devmelopner.tui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cabal_devmelopner"]
