[project]
name = "cabal-devmelopner"
version = "0.3.0"
description = "Repo-agnostic development agent with TUI/CLI, tools+verify, multi-provider support, and Tero-MCP integration"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Tyler", email = "tz-dev@vectorweight.com" }
]
license = { text = "MIT" }
dependencies = []

[tool.uv]
managed = true
python-preference = "only-managed"
default-groups = ["dev"]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.13",
    "pytest>=8.3",
    "textual-dev>=0.85",
]

[project.optional-dependencies]
tui = ["textual>=0.85.0"]

[project.scripts]
cabal-devmelopner = "cabal_devmelopner.cli:main"
cabal-devmelopner-tui = "cabal_devmelopner.tui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cabal_devmelopner"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]